--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,3 +6,105 @@
 }
 
 
+body {
+    background-color: #333;
+}
+
+header , footer {
+    padding-left: 10px;
+    padding-right: 10px; 
+}
+
+/* cabeçalho */
+header {
+    height: 10vh;
+    background-color: #222222;
+    display: flex;
+    justify-content:space-between;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+header .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .logo h1 {
+    color: #fff;
+    font-weight: 400; 
+    text-transform: uppercase;
+    }
+
+header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header nav ul {
+    display: flex;
+    flex-direction: row;
+}
+
+header nav ul li {
+    padding-right: 20px;
+    list-style-type: none;
+}
+
+header nav ul li a {
+    font-size: 1.4rem;
+    color: rgb(118, 224, 11);
+    text-decoration: none;
+}
+
+header nav ul li a:hover {
+    color: chartreuse;
+    text-decoration: underline;
+}
+
+/* corpo do site */
+main {
+    background-color: #fff;
+}
+
+.box-section {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-section h2 {
+    color: #fff;
+    font-size: 2rem;
+}
+
+#box-1{
+    background-color: purple;
+}
+
+#box-2{
+    background-color: rgb(125, 186, 32);
+}
+
+#box-3{
+    background-color: rgb(23, 23, 189);
+}
+
+
+footer {
+    height: 10vh;
+    background-color: #222222;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+footer p{
+    font-size: 1.2rem ;
+    color: #fff;
+}
